src/main/frontend/styles/_grid.scss
@mixin animation-delay-list($count, $delay-step) {
  @for $i from 1 through $count {
    &:nth-of-type(#{$i}) {
      animation-delay: #{($i * $delay-step)}s;
    }
  }
}

.bm-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: calc(var(--section-padding) / 2);
  padding-inline: calc(var(--section-padding) / 2);
  padding-bottom: calc(var(--section-padding) / 2);
  // Force all rows to have equal height
  grid-auto-rows: 1fr;
  // Fill the height of the parent container
  flex: 1 1 auto;
  max-height: 100vh;

  @media screen and (prefers-reduced-motion: no-preference) {
    & > * {
      animation: scale-in 0.15s ease-in-out both;
      @include animation-delay-list(20, 0.025);
    }
  }
}

@keyframes scale-in {
  from {
    opacity: 0;
    scale: 95%;
  }
}

